jade-shooter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jade-shooter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jade-shooter
  template:
    metadata:
      labels:
        app: jade-shooter
    spec:
      containers:
        - name: jade-shooter0
          image: jwsy/jade-shooter:v1.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
