jade-shooter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jade-shooter-service
spec:
  selector:
    app: jade-shooter
  ports:
    - port: 8080
      targetPort: 80
